--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,9 @@
-@import '~bootstrap/scss/bootstrap';
-@import "swiper/css/bundle";
+@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/swiper/swiper-bundle.min.css";
 @import "~slick-carousel/slick/slick.css"; 
-@import 'node_modules/react-modal-video/scss/modal-video.scss';
-@import 'node_modules/react-tooltip/dist/react-tooltip.css';
-@import '@assets/css/nice-select.css';
-@import '@assets/scss/main.scss';
+@import '../../node_modules/react-modal-video/scss/modal-video.scss';
+@import '../../node_modules/react-tooltip/dist/react-tooltip.css';
+@import '../../public/assets/css/nice-select.css';
+@import '../../public/assets/scss/main.scss';
 
 
