Revert "remove unused code"
This reverts commit 5b3cbd1384e974e5bdb75f8634919b6e019f3d6b.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/swiper/swiper-bundle.min.css";
-// @import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick.css"; 
 @import '../../node_modules/react-modal-video/scss/modal-video.scss';
 @import '../../node_modules/react-tooltip/dist/react-tooltip.css';
 @import '../../public/assets/css/nice-select.css';
